# inference

./: .gitignore  Cargo.toml  README.md  __RELEASE__.md  inference.py  llama-client.py  pyproject.toml  requirements.ini  start_backup.sh
deploy/: autogenstudio.service  autogenstudio.yaml  default.toml  init.sh  magentic_ollama_allagent.yaml  magentic_ui_openrouter.yaml  mlflow.service  ollama_local_config.json  ops.sh  plugin-continue-config.json  wave.code-workspace
deploy/autogen-chart/: Chart.yaml  autogen-pv.yaml  autogen-pvc.yaml  values.yaml  wave.code-workspace
deploy/autogen-chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
doc/: 推理-Agent框架.dio  推理服务需求说明.md  智能机器助理需求说明.md  财务分析提示词.md
notebooks/: samv2_automatic_segmentation_with_wandb_tables.ipynb  samv2_prompted_segmentation_with_wandb_tables.ipynb
pyinfer/: __init__.py  app.py  autogenchat-tmp.py  chat.py  cli.sh  dataclient.py  inference.py  modelscope-tmp.py  modelscope_client.py  ollama-client.py  ollama_client.py  ollama_openai.py  openai_client.py  read_image.py  sam2_detect_image.py  server.py  settings.toml
pyinfer/mcp_hub/: openai.py  searxnr_search.py
pyinfer/models/: adapter.py
pyinfer/onnx_infer/: manifest.toml  sam2_detect_image.py  server.py
pyinfer/team_a2a/: merger.py  reporter.py
src/: chat.py  main-bak.py  main.rs  questions.py
src/pages/: __init__.py  cases.py  files.py
test/: test-autogen.py  test-ollama.py  test-ray.py  test_gradio.py
~/workspace/autogenstudio/: alembic.ini
