[project]
name = "inference"
version = "0.1.0"
description = "推理服务平台"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9.2",
    "polars>=1.12.0",
    "pylint>=3.3.1",
    "pytest>=8.3.3",
    # "ray[data,default,serve,train,tune]>=2.38.0",
    "sanic[ext]>=24.6.0",
    "scrapy>=2.11.2",
    "mlflow>=2.17.1",
    "psycopg2-binary>=2.9.10",
    "sqlmodel>=0.0.22",
    "magentic-one-cli>=0.2.2",
    # "genesis-world>=0.2.0",
    "magentic-one-cli>=0.2.3",
    "autogenstudio>=0.4.1.1",
    "autogen-ext[openai,web-surfer]>=0.4.9.3",
    "autogen-agentchat>=0.4.9.3",
]

[[tool.uv.index]]
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
default = true

[tool.uv.pip]
verify-hashes = true
upgrade-package = ["autogen"]
